
   SampleFormat is ignored for paletted images.

   Mixed SampleFormat are be handled incorrectly, since libtiff
   returns only the first SampleFormat value, and an image with both
   an alpha channel and SampleFormat = 2 for color channels probably
   has a different SampleFormat for the alpha channel.

   https://rt.cpan.org/Ticket/Display.html?id=74540

Imager 0.96 - 19 May 2013
===========

 - rearrange Imager's test files.
   https://rt.cpan.org/Ticket/Display.html?id=84596

 - Imager::Probe::_gcc_lib_paths now forces C locale.
   A sufficiently recent gcc prints localized keys for the search
   paths, which avoids that localization.
   https://rt.cpan.org/Ticket/Display.html?id=84963

 - fix a pod error detected by Pod::Simple 3.27 and laterm and skip
   pod tests unless AUTOMATED_TESTING or IMAGER_AUTHOR_TESTING is set
   and true.
   https://rt.cpan.org/Ticket/Display.html?id=85262
   reported by Andreas König

 - add a test for unclosed POD in C source, and fix the errors it
   found.
   https://rt.cpan.org/Ticket/Display.html?id=74875

 - fix some spelling errors detected by the newer aspell in Debian
   Wheezy.

 - remove a trailing ' from lib/Imager/Font/Test.pm's POD
   thanks to gregor herrmann <gregoa@debian.org>
   https://rt.cpan.org/Ticket/Display.html?id=85413

 - add a test for standard =head1 commands and fix the errors found

Imager 0.95 - 19 Apr 2013
===========

 - handle the SVf_UTF8 flag correctly on magic strings passed to
   Imager::IO's write() and raw_write() methods.
   This may misbehave in perl 5.6.x since the UTF8 flag may not be
   visible in the main SV after SvGETMAGIC().
   https://rt.cpan.org/Ticket/Display.html?id=83438

 - document that bounding_box() ignores the transformation matrix
   supplied to tranform() for fonts.
   https://rt.cpan.org/Ticket/Display.html?id=84106

Imager 0.94_02 - 5 Apr 2013
==============

 - enable debug logging for the standard font tests
