@@ -14,6 +14,10 @@ Imager release history.  Older releases can be found in Changes.old
 
    https://rt.cpan.org/Ticket/Display.html?id=74540
 
+ - Imager::Color's rgba() method now returns it's values as integers
+   instead of floating point. (IV instead of NV).
+   https://rt.cpan.org/Ticket/Display.html?id=69243 (partial)
+
 Imager 0.96 - 19 May 2013
 ===========
 
